fixed columns on smaller screen

--- a/curiositymachine/sass/layout/_dashboards.scss
+++ b/curiositymachine/sass/layout/_dashboards.scss
@@ -85,11 +85,11 @@
     }
   }
 
-  .col-5ths {
-    position: relative;
-    width: 20%;
-    padding-right: 10px;
-    padding-left: 10px;
-    float: left;
+  @media (min-width: 992px) {
+    .col-md-5ths {
+      position: relative;
+      width: 20%;
+      float: left;
+    }
   }
 }
